--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>DAVISM</title>
   <link rel="stylesheet" type="text/css" class="ui" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
   <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.js"></script>
-
+ <style>
     body {
       background-color: #fafafa
     }
