--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
 </head>
 <body>
 
-<div class="ui items">
+<div class="ui divided items">
   <div class="item">
     <div class="image">
       <img src="./image.png">
     </div>
     <div class="content">
-      <a class="header">Header</a>
+      <a class="header">12 Years a Slave</a>
       <div class="meta">
-        <span>Description</span>
+        <span class="cinema">Union Square 14</span>
       </div>
       <div class="description">
         <p></p>
       </div>
       <div class="extra">
-        Additional Details
+        <div class="ui label">IMAX</div>
+        <div class="ui label"><i class="globe icon"></i> Additional Languages</div>
       </div>
     </div>
   </div>
@@ -37,20 +38,43 @@
       <img src="./image.png">
     </div>
     <div class="content">
-      <a class="header">Header</a>
+      <a class="header">My Neighbor Totoro</a>
       <div class="meta">
-        <span>Description</span>
+        <span class="cinema">IFC Cinema</span>
       </div>
       <div class="description">
         <p></p>
       </div>
       <div class="extra">
-        Additional Details
+        <div class="ui right floated primary button">
+          Buy tickets
+          <i class="right chevron icon"></i>
+        </div>
+        <div class="ui label">Limited</div>
       </div>
     </div>
   </div>
-</div>
-
-
+  <div class="item">
+    <div class="image">
+      <img src="./image.png">
+    </div>
+    <div class="content">
+      <a class="header">Watchmen</a>
+      <div class="meta">
+        <span class="cinema">IFC</span>
+      </div>
+      <div class="description">
+        <p></p>
+      </div>
+      <div class="extra">
+        <div class="ui right floated primary button">
+          Buy tickets
+          <i class="right chevron icon"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>  
+  
 </body>
 </html>
