--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta viewport charset="UTF-8">
   <title>DAVISM</title>
   <link rel="stylesheet" type="text/css" class="ui" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
   <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.js"></script>
