--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <title>DAVISM</title>
+  <title>DAVEISM</title>
   <link rel="stylesheet" type="text/css" class="ui" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
   <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.js"></script>
  <style>
