--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="image">
       <img src="./image.png">
     </div>
-    <div class="content">
+    <div class="middle aligned content">
       <a class="header">12 Years a Slave</a>
       <div class="meta">
         <span class="cinema">Union Square 14</span>
@@ -37,7 +37,7 @@
     <div class="image">
       <img src="./image.png">
     </div>
-    <div class="content">
+    <div class="middle aligned content">
       <a class="header">My Neighbor Totoro</a>
       <div class="meta">
         <span class="cinema">IFC Cinema</span>
@@ -58,7 +58,7 @@
     <div class="image">
       <img src="./image.png">
     </div>
-    <div class="content">
+    <div class="middle aligned content">
       <a class="header">Watchmen</a>
       <div class="meta">
         <span class="cinema">IFC</span>
