--- a/menutest.html
+++ b/menutest.html
@@ -1,3 +1,19 @@
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <title>DAVEISM</title>
+  <link rel="stylesheet" type="text/css" class="ui" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
+  <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.js"></script>
+ <style>
+    body {
+      background-color: #fafafa
+    }
+  </style>
+</head>
+<body>
+
                 <div className="ui stackable fluid three item menu"  style={{borderWidth:'1px', backgroundColor: "#092940", color: "#fff" }}>
                   <div className="left stackable menu">
                     <a href="http://deq.nc.gov/" className="ui left floated image" style={{width: "225px",height:"auto",fontSize: "1rem",padding: "0 14px 0 14px"  }}>
@@ -20,3 +36,9 @@
                       Map and Charts
                     </a>
                   </div>
+
+  
+</body>
+</html>
+
+  
