--- a/menutest.html
+++ b/menutest.html
@@ -26,7 +26,7 @@
                     </h2>
                   </div>
                   <div class="right stackable menu">
-                    <a   className="ui inverted button"  href="#/Resources/" >
+                    <a   class="ui inverted button"  href="#/Resources/" >
                       Resources
                     </a>
                     <a   id="about" class="ui inverted button"  >
