--- a/menutest.html
+++ b/menutest.html
@@ -14,14 +14,14 @@
 </head>
 <body>
 
-                <div class="ui stackable fluid three item menu"  style={{borderWidth:'1px', backgroundColor: "#092940", color: "#fff" }}>
+                <div class="ui stackable fluid three item menu"  >
                   <div class="left stackable menu">
-                    <a href="http://deq.nc.gov/" className="ui left floated image" style={{width: "225px",height:"auto",fontSize: "1rem",padding: "0 14px 0 14px"  }}>
+                    <a href="http://deq.nc.gov/" className="ui left floated image" >
                       <img src="config/l_agency-ncdenr.svg"  />
                     </a>
                   </div>
-                  <div class="header item" style={{color: "#fff"}}>
-                    <h2 class="ui center fluid aligned header" style={{color: "#fff"}}>
+                  <div class="header item" >
+                    <h2 class="ui center fluid aligned header">
                       River Basin Restoration Priorities Web Application
                     </h2>
                   </div>
