--- a/menutest.html
+++ b/menutest.html
@@ -26,13 +26,13 @@
                     </h2>
                   </div>
                   <div class="right stackable menu">
-                    <a   class="ui inverted button"  href="#/Resources/" >
+                    <a   class="ui button"  href="#/Resources/" >
                       Resources
                     </a>
-                    <a   id="about" class="ui inverted button"  >
+                    <a   id="about" class="ui button"  >
                       About
                     </a>
-                    <a  class="ui inverted button"  href="#/" >
+                    <a  class="ui button"  href="#/" >
                       Map and Charts
                     </a>
                   </div>
