--- a/menutest.html
+++ b/menutest.html
@@ -21,7 +21,7 @@
                     </a>
                   </div>
                   <div class="header item" >
-                    <h2 class="ui center fluid aligned header">
+                    <h2 class="ui center fluid center aligned header">
                       River Basin Restoration Priorities Web Application
                     </h2>
                   </div>
