--- a/menutest.html
+++ b/menutest.html
@@ -15,7 +15,7 @@
 <body>
 
                 <div class="ui stackable fluid three item menu"  >
-                  <div class="left stackable menu">
+                   <div class="item">
                     <a href="http://deq.nc.gov/" className="ui left floated image" >
                       <img src="config/l_agency-ncdenr.svg"  />
                     </a>
@@ -25,13 +25,17 @@
                       River Basin Restoration Priorities Web Application
                     </h2>
                   </div>
-                  <div class="right stackable menu">
+                   <div class="item">
                     <a   class="ui button"  href="#/Resources/" >
                       Resources
                     </a>
+                  </div>
+                  <div class="item">
                     <a   id="about" class="ui button"  >
                       About
                     </a>
+                  </div>
+                  <div class="item">
                     <a  class="ui button"  href="#/" >
                       Map and Charts
                     </a>
