--- a/menutest.html
+++ b/menutest.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-                <div class="ui stackable fluid three item menu"  >
+                <div class="ui stackable fluid five item menu"  >
                    <div class="item">
                     <a href="http://deq.nc.gov/" className="ui left floated image" >
                       <img src="config/l_agency-ncdenr.svg"  />
