--- a/menutest.html
+++ b/menutest.html
@@ -25,17 +25,17 @@
                       River Basin Restoration Priorities Web Application
                     </h2>
                   </div>
-                   <div class="item">
+                   <div class="right item">
                     <a   class="ui button"  href="#/Resources/" >
                       Resources
                     </a>
                   </div>
-                  <div class="item">
+                  <div class="right item">
                     <a   id="about" class="ui button"  >
                       About
                     </a>
                   </div>
-                  <div class="item">
+                  <div class="right item">
                     <a  class="ui button"  href="#/" >
                       Map and Charts
                     </a>
