--- a/menutest.html
+++ b/menutest.html
@@ -25,20 +25,14 @@
                       River Basin Restoration Priorities Web Application
                     </h2>
                   </div>
-                   <div class="right item">
-                    <a   class="ui button"  href="#/Resources/" >
+                   <div class="right link item" href="#/Resources/">
                       Resources
-                    </a>
                   </div>
-                  <div class="right item">
-                    <a   id="about" class="ui button"  >
+                  <div class="right link item">
                       About
-                    </a>
                   </div>
-                  <div class="right item">
-                    <a  class="ui button"  href="#/" >
+                  <div class="right link item"  href="#/" >
                       Map and Charts
-                    </a>
                   </div>
                 </div>
 
