--- a/menutest.html
+++ b/menutest.html
@@ -20,7 +20,7 @@
                       <img src="config/l_agency-ncdenr.svg"  />
                     </a>
                   </div>
-                  <div class="header item" >
+                  <div class="header item" style="width:50%">
                     <h2 class="ui center fluid center aligned header">
                       River Basin Restoration Priorities Web Application
                     </h2>
