--- a/menutest.html
+++ b/menutest.html
@@ -13,8 +13,8 @@
   </style>
 </head>
 <body>
-
-                <div class="ui stackable fluid five item menu"  >
+              <div class="ui centered align basic segment">
+                <div class="ui stackable item menu"  >
                    <div class="item">
                     <a href="http://deq.nc.gov/" className="ui left floated image" >
                       <img src="config/l_agency-ncdenr.svg"  />
@@ -34,6 +34,7 @@
                   <div class="right link item"  href="#/" >
                       Map and Charts
                   </div>
+                </div>
                 </div>
 
   
