--- a/menutest.html
+++ b/menutest.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-                <div class="ui stackable item menu"  >
+                <div class="ui stackable menu"  >
                    <div class="item">
                     <a href="http://deq.nc.gov/" className="ui left floated image" >
                       <img src="config/l_agency-ncdenr.svg"  />
