--- a/menutest.html
+++ b/menutest.html
@@ -13,27 +13,15 @@
   </style>
 </head>
 <body>
-                <div class="ui stackable menu"  >
-                   <div class="item">
-                    <a href="http://deq.nc.gov/" className="ui left floated image" >
-                      <img src="config/l_agency-ncdenr.svg"  />
-                    </a>
-                  </div>
-                  <div class="header item" style="width:50%">
-                    <h2 class="ui center fluid center aligned header">
-                      River Basin Restoration Priorities Web Application
-                    </h2>
-                  </div>
-                   <div class="right link item" href="#/Resources/">
-                      Resources
-                  </div>
-                  <div class="right link item">
-                      About
-                  </div>
-                  <div class="right link item"  href="#/" >
-                      Map and Charts
-                  </div>
-                </div>
+  
+<div class="ui grid">
+  <div class="row">
+    <div class="three wide column"></div>
+    <div class="eight wide column"></div>
+    <div class="five wide column"></div>
+  </div>
+</div>
+ 
 
   
 </body>
