--- a/menutest.html
+++ b/menutest.html
@@ -17,7 +17,11 @@
 <div class="ui grid">
   <div class="row">
     <div class="three wide column"></div>
-    <div class="eight wide column"></div>
+    <div class="eight wide column">
+                    <h2 class="ui center fluid center aligned header">
+                      River Basin Restoration Priorities Web Application
+                    </h2>    
+    </div>
     <div class="five wide column"></div>
   </div>
 </div>
