--- a/menutest.html
+++ b/menutest.html
@@ -22,7 +22,22 @@
                       River Basin Restoration Priorities Web Application
                     </h2>    
     </div>
-    <div class="five wide column"></div>
+    <div class="five wide column">
+                        <a   class="ui button"  href="#/Resources/" >
+                      Resources
+                    </a>
+                  </div>
+                  <div class="item">
+                    <a   id="about" class="ui button"  >
+                      About
+                    </a>
+                  </div>
+                  <div class="item">
+                    <a  class="ui button"  href="#/" >
+                      Map and Charts
+                    </a>
+    
+    </div>
   </div>
 </div>
  
