--- a/menutest.html
+++ b/menutest.html
@@ -14,33 +14,35 @@
 </head>
 <body>
   
-<div class="ui grid">
-  <div class="row">
-    <div class="three wide column"></div>
-    <div class="eight wide column">
-                    <h2 class="ui center fluid center aligned header">
-                      River Basin Restoration Priorities Web Application
-                    </h2>    
+      <div class="ui grid">
+        <div class="row">
+          <div class="three wide column">
+            test
+          </div>
+          <div class="ten wide column">
+                          <h2 class="ui center fluid center aligned header">
+                            River Basin Restoration Priorities Web Application
+                          </h2>    
+          </div>
+          <div class="one wide column">
+                              <a   class="ui button"  href="#/Resources/" >
+                            Resources
+                          </a>
+          </div>
+          <div class="one wide column">
+                          <a   id="about" class="ui button"  >
+                            About
+                          </a>
+                        </div>
+          <div class="one wide column">
+          <div class="one wide column">
+                          <a  class="ui button"  href="#/" >
+                            Map and Charts
+                          </a>
+            </div>
+            </div>
+      </div>
     </div>
-    <div class="five wide column">
-                        <a   class="ui button"  href="#/Resources/" >
-                      Resources
-                    </a>
-                  </div>
-                  <div class="item">
-                    <a   id="about" class="ui button"  >
-                      About
-                    </a>
-                  </div>
-                  <div class="item">
-                    <a  class="ui button"  href="#/" >
-                      Map and Charts
-                    </a>
-    
-    </div>
-  </div>
-</div>
- 
 
   
 </body>
