--- a/menutest.html
+++ b/menutest.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   
-      <div class="ui grid">
+      <div class="ui stackable five column grid">
         <div class="row">
           <div class="three wide column">
             test
@@ -35,11 +35,9 @@
                           </a>
                         </div>
           <div class="one wide column">
-          <div class="one wide column">
                           <a  class="ui button"  href="#/" >
                             Map and Charts
                           </a>
-            </div>
             </div>
       </div>
     </div>
