--- a/menutest.html
+++ b/menutest.html
@@ -20,25 +20,23 @@
             test
           </div>
           <div class="ten wide column">
-                          <h2 class="ui center fluid center aligned header">
-                            River Basin Restoration Priorities Web Application
-                          </h2>    
+            <h2 class="ui center fluid center aligned header">
+              River Basin Restoration Priorities Web Application
+            </h2>    
           </div>
-          <div class="one wide column">
-                              <a   class="ui button"  href="#/Resources/" >
-                            Resources
-                          </a>
-          </div>
-          <div class="one wide column">
-                          <a   id="about" class="ui button"  >
-                            About
-                          </a>
-                        </div>
-          <div class="one wide column">
-                          <a  class="ui button"  href="#/" >
-                            Map and Charts
-                          </a>
+          <div class="three wide column">
+            <div className="ui buttons">
+              <a class="ui button"  href="#/Resources/" >
+                Resources
+              </a>
+              <a id="about" class="ui button"  >
+                About
+              </a>
             </div>
+              <a  class="ui button"  href="#/" >
+                Map and Charts
+              </a>
+          </div>
       </div>
     </div>
 
