--- a/menutest.html
+++ b/menutest.html
@@ -16,7 +16,7 @@
   
       <div class="ui stackable five column grid">
         <div class="row">
-          <div class="three wide column">
+          <div class="two wide column">
             test
           </div>
           <div class="ten wide column">
@@ -24,7 +24,7 @@
               River Basin Restoration Priorities Web Application
             </h2>    
           </div>
-          <div class="three wide column">
+          <div class="four wide column">
             <div className="ui buttons">
               <a class="ui button"  href="#/Resources/" >
                 Resources
