--- a/menutest.html
+++ b/menutest.html
@@ -24,20 +24,21 @@
               River Basin Restoration Priorities Web Application
             </h2>    
           </div>
-          <div class="four wide column">
-            <div className="ui buttons">
+          <div class="one wide column">
               <a class="ui button"  href="#/Resources/" >
                 Resources
               </a>
+          </div>         
+          <div class="one wide column">
               <a id="about" class="ui button"  >
                 About
               </a>
-            </div>
+          </div>
+          <div class="one wide column">
               <a  class="ui button"  href="#/" >
                 Map and Charts
               </a>
           </div>
-      </div>
     </div>
 
   
