--- a/menutest.html
+++ b/menutest.html
@@ -16,7 +16,7 @@
   
       <div class="ui stackable five column grid">
         <div class="row">
-          <div class="two wide column">
+          <div class="four wide column">
             test
           </div>
           <div class="ten wide column">
