--- a/menutest.html
+++ b/menutest.html
@@ -16,7 +16,7 @@
   
       <div class="ui stackable five column grid">
         <div class="row">
-          <div class="four wide column">
+          <div class="four wide grey column">
             test
           </div>
           <div class="ten wide column">
@@ -24,18 +24,18 @@
               River Basin Restoration Priorities Web Application
             </h2>    
           </div>
-          <div class="one wide column">
-              <a class="ui button"  href="#/Resources/" >
+          <div class="one wide grey column">
+              <a class="ui button" href="#/Resources/" >
                 Resources
               </a>
           </div>         
-          <div class="one wide column">
+          <div class="one wide grey column">
               <a id="about" class="ui button"  >
                 About
               </a>
           </div>
-          <div class="one wide column">
-              <a  class="ui button"  href="#/" >
+          <div class="one wide grey column">
+              <a  class="ui button" href="#/" >
                 Map and Charts
               </a>
           </div>
