--- a/menutest.html
+++ b/menutest.html
@@ -16,7 +16,7 @@
   
       <div class="ui stackable five column grid">
         <div class="row">
-          <div class="four wide grey column">
+          <div class="three wide grey column">
             test
           </div>
           <div class="ten wide column">
@@ -24,22 +24,26 @@
               River Basin Restoration Priorities Web Application
             </h2>    
           </div>
-          <div class="one wide grey column">
-              <a class="ui button" href="#/Resources/" >
-                Resources
-              </a>
-          </div>         
-          <div class="one wide grey column">
-              <a id="about" class="ui button"  >
-                About
-              </a>
+          <div class="three wide grey column">
+            <div class="ui three column grid">
+              <div class="column">
+                <a class="ui button" href="#/Resources/" >
+                  Resources
+                </a>
+              </div>
+              <div class="column">
+                <a id="about" class="ui button"  >
+                  About
+                </a>
+              </div>
+              <div class="column">
+                <a  class="ui button" href="#/" >
+                  Map and Charts
+                </a>
+              </div>
+            </div>            
           </div>
-          <div class="one wide grey column">
-              <a  class="ui button" href="#/" >
-                Map and Charts
-              </a>
-          </div>
-      </div>
+        </div>
     </div>
 
   
