--- a/menutest.html
+++ b/menutest.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   
-      <div class="ui stackable five column grid">
+      <div class="ui stackable three column grid">
         <div class="row">
           <div class="three wide grey column">
             test
