--- a/menutest.html
+++ b/menutest.html
@@ -13,38 +13,41 @@
   </style>
 </head>
 <body>
-  
-      <div class="ui stackable three column grid">
-        <div class="row">
-          <div class="three wide grey column">
-            test
-          </div>
-          <div class="ten wide column">
-            <h2 class="ui center fluid center aligned header">
-              River Basin Restoration Priorities Web Application
-            </h2>    
-          </div>
-          <div class="three wide grey column">
-            <div class="ui three column grid">
-              <div class="column">
-                <a class="ui button" href="#/Resources/" >
-                  Resources
-                </a>
-              </div>
-              <div class="column">
-                <a id="about" class="ui button"  >
-                  About
-                </a>
-              </div>
-              <div class="column">
-                <a  class="ui button" href="#/" >
-                  Map and Charts
-                </a>
-              </div>
-            </div>            
-          </div>
-        </div>
+
+  <div class="ui equal width grid">
+    <div class="column">
+      <div class="ui segment">
+        test
+      </div>
     </div>
+    <div class="eight wide column">
+      <div class="ui segment">
+        River Basin Restoration Priorities Web Application
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui segment">
+        <div class="ui three column grid">
+          <div class="column">
+            <a class="ui button" href="#/Resources/" >
+              Resources
+            </a>
+          </div>
+          <div class="column">
+            <a id="about" class="ui button"  >
+              About
+            </a>
+          </div>
+          <div class="column">
+            <a  class="ui button" href="#/" >
+              Map and Charts
+            </a>
+          </div>
+        </div>  
+      </div>
+    </div>
+  </div>
+
 
   
 </body>
