--- a/menutest.html
+++ b/menutest.html
@@ -16,17 +16,17 @@
 
   <div class="ui equal width grid">
     <div class="column">
-      <div class="ui segment">
+      <div class="ui basic segment">
         test
       </div>
     </div>
     <div class="eight wide column">
-      <div class="ui segment">
+      <div class="ui basic segment">
         River Basin Restoration Priorities Web Application
       </div>
     </div>
     <div class="column">
-      <div class="ui segment">
+      <div class="ui basic segment">
         <div class="ui three column grid">
           <div class="column">
             <a class="ui button" href="#/Resources/" >
