--- a/menutest.html
+++ b/menutest.html
@@ -20,23 +20,19 @@
         test
       </div>
     </div>
-    <div class="eight wide column">
+    <div class="six wide column">
       <div class="ui basic segment">
-        River Basin Restoration Priorities Web Application
+        <h2>River Basin Restoration Priorities Web Application</h2>
       </div>
     </div>
     <div class="column">
       <div class="ui basic segment">
         <div class="ui three column grid">
           <div class="column">
-            <a class="ui button" href="#/Resources/" >
               Resources
-            </a>
           </div>
           <div class="column">
-            <a id="about" class="ui button"  >
               About
-            </a>
           </div>
           <div class="column">
               Map and Charts
