--- a/menutest.html
+++ b/menutest.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="ui equal width grid">
+  <div class="ui equal width stackable grid">
     <div class="column">
       <div class="ui basic segment">
         test
