--- a/menutest.html
+++ b/menutest.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="ui equal width stackable grid">
+  <div class="ui equal width center aligned stackable grid">
     <div class="column">
       <div class="ui basic segment">
         test
@@ -38,10 +38,12 @@
           </div>
         </div>  
       </div>
-      <div class="sixteen wide column">
-        The purpose of this tool is to display the Division of Mitigation Services Targeted Resource Areas (TRAs) and identify watersheds where ecological and hydrological function can be improved. TRAs identify clusters of areas where habitat, hydrology and/or water quality variables can be managed to improve watershed function. To get started click a River Basin on the map, or search for a location to zoom to.
-
+      <div class="sixteen wide left aligned column">
+        <p>The purpose of this tool is to display the Division of Mitigation Services Targeted Resource Areas (TRAs) and identify watersheds where ecological and hydrological function can be improved. TRAs identify clusters of areas where habitat, hydrology and/or water quality variables can be managed to improve watershed function. To get started click a River Basin on the map, or search for a location to zoom to.
+        </p>
+        <p>
         From North Carolina Department of Environmental Quality (NCDEQ) -Division of Mitigation Services
+        </p>
     </div>
   </div>
 
