--- a/menutest.html
+++ b/menutest.html
@@ -38,12 +38,14 @@
           </div>
         </div>  
       </div>
-      <div class="sixteen wide left aligned column">
+      <div class="ui left aligned stackable padded grid">
+        <div class="sixteen wide left aligned column">
         <p>The purpose of this tool is to display the Division of Mitigation Services Targeted Resource Areas (TRAs) and identify watersheds where ecological and hydrological function can be improved. TRAs identify clusters of areas where habitat, hydrology and/or water quality variables can be managed to improve watershed function. To get started click a River Basin on the map, or search for a location to zoom to.
         </p>
         <p>
         From North Carolina Department of Environmental Quality (NCDEQ) -Division of Mitigation Services
         </p>
+      </div>
     </div>
   </div>
 
