--- a/menutest.html
+++ b/menutest.html
@@ -15,17 +15,17 @@
 <body>
 
   <div class="ui equal width center aligned stackable grid">
-    <div class="column">
+    <div class="two wide middle column">
       <div class="ui basic segment">
         test
       </div>
     </div>
-    <div class="six wide column">
+    <div class="eight wide column">
       <div class="ui basic segment">
         <h2>River Basin Restoration Priorities Web Application</h2>
       </div>
     </div>
-    <div class="column">
+    <div class="middle aligned column">
         <div class="ui three column grid">
           <div class="column">
               Resources
