--- a/menutest.html
+++ b/menutest.html
@@ -28,13 +28,17 @@
     <div class="middle aligned column">
         <div class="ui three column grid">
           <div class="column">
-              Resources
+          <a  class="ui inverted button"  href="#/Resources/" >
+            Resources
+          </a>
           </div>
           <div class="column">
               About
           </div>
           <div class="column">
+            <a  className="ui inverted button"  href="#/" >
               Map and Charts
+            </a>
           </div>
         </div>  
       </div>
