--- a/menutest.html
+++ b/menutest.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="ui equal width center aligned stackable grid">
+  <div class="ui equal width center aligned stackable grid" style="background-color: #092940">
     <div class="two wide middle column">
       <div class="ui basic segment">
         test
@@ -33,7 +33,9 @@
           </a>
           </div>
           <div class="column">
-              About
+          <button id="about" class="ui inverted button"  >
+            About
+          </button>
           </div>
           <div class="column">
             <a  className="ui inverted button"  href="#/" >
