--- a/menutest.html
+++ b/menutest.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="ui equal width center aligned stackable grid" style="background-color: #092940">
+  <div class="ui equal width center aligned stackable grid" style="background-color: #092940;color: #fff">
     <div class="two wide middle column">
       <div class="ui basic segment">
         test
@@ -38,7 +38,7 @@
           </button>
           </div>
           <div class="column">
-            <a  className="ui inverted button"  href="#/" >
+            <a  class="ui inverted button"  href="#/" >
               Map and Charts
             </a>
           </div>
