--- a/menutest.html
+++ b/menutest.html
@@ -27,18 +27,18 @@
     </div>
     <div class="middle aligned column">
         <div class="ui three column grid">
-          <div class="column">
-          <a  class="ui inverted button"  href="#/Resources/" >
+          <div class="column" style="padding-left: 0px;padding-right: 0px;" >
+          <a  class="ui inverted fluid button"  href="#/Resources/" >
             Resources
           </a>
           </div>
-          <div class="column">
-          <button id="about" class="ui inverted button"  >
+          <div class="column" style="padding-left: 0px;padding-right: 0px;" >
+          <button id="about" class="ui inverted fluid button"  >
             About
           </button>
           </div>
-          <div class="column">
-            <a  class="ui inverted button"  href="#/" >
+          <div class="column" style="padding-left: 0px;padding-right: 0px;" >
+            <a  class="ui inverted fluid button"  href="#/" >
               Map and Charts
             </a>
           </div>
