--- a/menutest.html
+++ b/menutest.html
@@ -25,7 +25,7 @@
         <h2>River Basin Restoration Priorities Web Application</h2>
       </div>
     </div>
-    <div class="middle aligned column">
+    <div class="middle aligned column" style="margin-right: 14px">
         <div class="ui three column grid">
           <div class="column" style="padding-left: 0px;padding-right: 0px;" >
           <a  class="ui inverted fluid button"  href="#/Resources/" >
