--- a/menutest.html
+++ b/menutest.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="middle aligned column" style="margin-right: 14px">
-        <div class="ui three column grid">
+        <div class="ui three column grid" style="padding-right: 14px">
           <div class="column" style="padding-left: 0px;padding-right: 0px;" >
           <a  class="ui inverted fluid button"  href="#/Resources/" >
             Resources
