--- a/menutest.html
+++ b/menutest.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="ui equal width center aligned stackable grid" style="background-color: #092940;color: #fff">
-    <div class="two wide middle column">
+    <div class="two wide middle left aligned column">
       <div class="ui basic segment">
         test
       </div>
