--- a/menutest.html
+++ b/menutest.html
@@ -17,7 +17,7 @@
   <div class="ui equal width center aligned stackable grid" style="background-color: #092940;color: #fff">
     <div class="two wide middle left aligned column">
       <div class="ui basic segment">
-              <a href="http://deq.nc.gov/" class="ui left floated image" style="width: 225px;height:auto;fontSize: 1rem;padding: 0 14px 0 14px" >
+              <a href="http://deq.nc.gov/" class="ui medium image" >
                 <img src="l_agency-ncdenr.svg"  />
               </a>
       </div>
