--- a/menutest.html
+++ b/menutest.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="ui equal width center aligned stackable grid" style="background-color: #092940;color: #fff">
-    <div class="two wide middle left aligned column">
+    <div class="two wide middle center aligned column">
       <div class="ui basic segment">
               <a href="http://deq.nc.gov/" class="ui medium image" >
                 <img src="l_agency-ncdenr.svg"  />
