--- a/menutest.html
+++ b/menutest.html
@@ -18,7 +18,7 @@
     <div class="two wide middle center aligned column">
       <div class="ui basic segment">
               <a href="http://deq.nc.gov/" class="ui medium image" >
-                <img src="l_agency-ncdenr.svg"  />
+                <img src="l_agency-ncdenr.svg" class="ui fluid centered image" style="min-width: 150px;max-width: 250px;" />
               </a>
       </div>
     </div>
@@ -40,7 +40,7 @@
           </button>
           </div>
           <div class="column" style="padding-left: 0px;padding-right: 0px;" >
-            <a  class="ui inverted fluid button"  href="#/" >
+            <a  class="ui inverted fluid button" href="#/" >
               Map and Charts
             </a>
           </div>
