--- a/menutest.html
+++ b/menutest.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="middle aligned column" style="margin-right: 14px">
-        <div class="ui three column grid" style="padding-right: 14px">
+        <div class="ui three column grid" style="padding-left: 14px;padding-right: 14px">
           <div class="five wide column" style="padding-left: 0px;padding-right: 0px;" >
           <a  class="ui inverted fluid button"  href="#/Resources/" >
             Resources
