--- a/menutest.html
+++ b/menutest.html
@@ -38,7 +38,7 @@
           <button id="about" class="ui inverted fluid button"  >
             About
           </button>
-            <a  class="ui inverted fluid button" href="#/" >
+            <a  class="ui inverted fluid button" href="#/" style="margin-top: 14px">
               Map and Charts
             </a>
           </div>
