--- a/menutest.html
+++ b/menutest.html
@@ -32,13 +32,13 @@
           
           <div class="sixteen wide column" style="padding-left: 0px;padding-right: 0px;" >
             <div className="ui right floated buttons" >
-          <a  class="ui inverted fluid button"  href="#/Resources/" >
+          <a  class="ui inverted button"  href="#/Resources/" >
             Resources
           </a>
-          <button id="about" class="ui inverted fluid button"  >
+          <button id="about" class="ui inverted button"  >
             About
           </button>
-            <a  class="ui inverted fluid button" href="#/" style="margin-top: 14px">
+            <a  class="ui inverted button" href="#/" style="margin-top: 14px">
               Map and Charts
             </a>
           </div>
