--- a/menutest.html
+++ b/menutest.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="ui equal width center aligned stackable grid" style="background-color: #092940;color: #fff">
-    <div class="two wide middle center aligned column">
+    <div class="three wide middle center aligned column">
       <div class="ui basic segment">
               <a href="http://deq.nc.gov/" class="ui medium image" >
                 <img src="l_agency-ncdenr.svg" class="ui fluid centered image" style="min-width: 150px;max-width: 250px;" />
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="middle aligned column" style="margin-right: 14px">
-        <div class="ui three column grid" style="padding-left: 14px;padding-right: 14px">
+        <div class="ui three column grid" style="padding-left: 0px;padding-right: 14px">
           
           <div class="sixteen wide column" style="padding-left: 0px;padding-right: 0px;" >
             <div className="ui right floated buttons" >
