--- a/menutest.html
+++ b/menutest.html
@@ -22,7 +22,7 @@
               </a>
       </div>
     </div>
-    <div class="eight wide column">
+    <div class="seven wide column">
       <div class="ui basic segment">
         <h2>River Basin Restoration Priorities Web Application</h2>
       </div>
