--- a/menutest.html
+++ b/menutest.html
@@ -18,7 +18,7 @@
     <div class="three wide middle center aligned column">
       <div class="ui basic segment">
               <a href="http://deq.nc.gov/" class="ui medium image" >
-                <img src="l_agency-ncdenr.svg" class="ui fluid centered image" style="min-width: 150px;max-width: 250px;" />
+                <img src="l_agency-ncdenr.svg" class="ui fluid centered image" style="min-width: 150px;max-width: 225px;" />
               </a>
       </div>
     </div>
@@ -32,15 +32,15 @@
           
           <div class="sixteen wide column" style="padding-left: 0px;padding-right: 0px;" >
             <div className="ui right floated buttons" >
-          <a  class="ui inverted button"  href="#/Resources/" >
-            Resources
-          </a>
-          <button id="about" class="ui inverted button"  >
-            About
-          </button>
-            <a  class="ui inverted button" href="#/" style="margin-top: 14px">
-              Map and Charts
-            </a>
+              <a  class="ui inverted button"  href="#/Resources/" style="padding-right: 0px" >
+                Resources
+              </a>
+              <button id="about" class="ui inverted button" style="padding-right: 0px">
+                About
+              </button>
+              <a  class="ui inverted button" href="#/" style="padding-right: 0px;margin-top: 14px">
+                Map and Charts
+              </a>
           </div>
         </div>  
       </div>
