--- a/reversed.html
+++ b/reversed.html
@@ -4,12 +4,27 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>DAVEISM</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" class="ui" href="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
   <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.6/semantic.min.js"></script>
- <style>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSSM-1PdYcqHexozXngo7SCqOVh7jiGks&libraries=places"></script>
+  <script type="text/javascript" language="javascript" src="config/constants.json"></script>
+
+  <style>
+    .leaflet-container {
+      overflow: hidden;
+      bottom:0px;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      border: 1px solid rgba(0,0,0,.09);
+      /*margin-top: 14px;*/
+    }
+
     body {
       background-color: #fafafa
-    } 
+    }
   </style>
 </head>
 <body>
