--- a/reversed.html
+++ b/reversed.html
@@ -29,11 +29,15 @@
 </head>
 <body>
 <div class="ui mobile reversed two column grid" data-reactid=".0.2">
-  <div class="ui sixteen wide column" style="padding: 0px 7px 0px 10px; margin-bottom: 0px; margin-top: 14px; min-height: 87px;" data-reactid=".0.2.0">
+  <div class="column" style="padding: 0px 7px 0px 10px; margin-bottom: 0px; margin-top: 14px; min-height: 87px;" data-reactid=".0.2.0">
    test 1
   </div>
-  <div class="ui sixteen wide column" style="padding: 0px 7px 0px 10px; margin-bottom: 0px; margin-top: 14px; min-height: 87px;" data-reactid=".0.2.0">
-      test 2
+  <div class="column" style="padding: 0px 7px 0px 10px; margin-bottom: 0px; margin-top: 14px; min-height: 87px;" data-reactid=".0.2.0">
+    <div class="ui sixteen wide column grid ">
+      <div class="column">
+        test 2
+      </div>
+    </div>
   </div>
   </div>
 
