--- a/reversed.html
+++ b/reversed.html
@@ -34,8 +34,10 @@
   </div>
   <div class="column" style="padding: 0px 7px 0px 10px; margin-bottom: 0px; margin-top: 14px; min-height: 87px;" data-reactid=".0.2.0">
     <div class="ui sixteen wide column grid ">
-      <div class="column">
+       <div class="stretched row" >
+        <div class="column">
         test 2
+        </div>
       </div>
     </div>
   </div>
